# MyMLFramework

./: .gitignore  README.md
my_lib/: Cargo.toml
my_lib/src/: activation.rs  data.rs  lib.rs  loss.rs  main.rs  optimizer.rs  utils.rs
my_lib/src/layers/: conv.rs  dense.rs  layer.rs  maxpooling.rs  mod.rs
my_lib/src/models/: cnn.rs  linear_model.rs  mlp.rs  mod.rs  rbf.rs  tmp.rs
