[package]
name = "my_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.4"
rand_distr = "0.4"
nalgebra = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17.7"
image = "0.23"
walkdir = "2.3"
chrono = "0.4" 